--- a/src/main/resources/Astrologer/localization/eng/Keywords.json
+++ b/src/main/resources/Astrologer/localization/eng/Keywords.json
@@ -5,7 +5,7 @@
       "star",
       "stars"
     ],
-    "DESCRIPTION": "When this card is played or #yExhausted, advance the #yStellar #yPhase and change the #yStellar #yAlignment."
+    "DESCRIPTION": "When this card is played or #yExhausted, increment the #yStellar #yPhase and change the #yStellar #yAlignment."
   },
   {
     "PROPER_NAME": "Stellar Phase",
