--- a/src/main/resources/Astrologer/localization/eng/RelicStrings.json
+++ b/src/main/resources/Astrologer/localization/eng/RelicStrings.json
@@ -6,6 +6,13 @@
       "Put the first card played each turn onto the bottom of the draw pile."
     ]
   },
+  "astrologer:Lemegeton": {
+    "NAME": "Lemegeton",
+    "FLAVOR": "Lemegeton",
+    "DESCRIPTIONS": [
+      "Whenever you draw a card, replace it with a random card. The cost remains the same."
+    ]
+  },
   "astrologer:SkyMirrorUpg": {
     "NAME": "Universal Mirror",
     "FLAVOR": "It reflects everything; ",
